--- a/p1.html
+++ b/p1.html
@@ -7,5 +7,25 @@
 </head>
 <body>
     <h1>Hola mundo</h1>
+    <table>
+        <tr>
+            <td>
+                Celda 1
+            </td>
+            <td>
+                Celda 2
+            </td>
+        </tr>
+        <tr>
+            <td>
+                Celda 3
+            </td>
+            <td>
+                Celda 4
+            </td>
+        </tr>
+
+
+    </table>
 </body>
 </html>
