--- a/p1.html
+++ b/p1.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Hola mundo</h1>
+    <h1>Oliver's</h1>
     <table>
         <tr>
             <td>
@@ -15,16 +15,34 @@
             <td>
                 Celda 2
             </td>
-        </tr>
-        <tr>
             <td>
                 Celda 3
             </td>
-            <td>
+        </tr>
+        <tr>
+            <td id="mesa 1">
                 Celda 4
             </td>
+            <td id="mesa 2">
+                Celda 5
+            </td>
+            <td id="mesa 3">
+                Celda 6
+            </td>
+           
         </tr>
-
+        <tr>
+            <td id="temporizador m1">
+                tiempo mesa 1
+            </td>
+            <td id="temporizador m2">
+                tiempo mesa 2
+            </td>
+            <td id="temporizador m3">
+                tiempo mesa 3
+            </td>
+           
+        </tr>
 
     </table>
 </body>
