Pruebas con cambiar la imagen de la mesa

--- a/p1.html
+++ b/p1.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link href="edit.css" rel="stylesheet" type="text/css">
+    <script src="script.js"></script>
 </head>
 <body>
     <h1>Oliver's</h1>
@@ -26,14 +27,14 @@
         <!-- Inicio cuerpo de la tabla 1-->
         <tbody>
             <tr>
-                <td id="mesa 1">
-                    <img src="imagenes/mNoUso.jpg" width="600">
+                <td>
+                    <img src="mNoUso.jpg" id="mtable" width="600" onclick="cambiarMesa();">
                 </td>
-                <td id="mesa 2">
-                    <img src="imagenes/mNoUso.jpg" width="600">
+                <td >
+                    <img src="mNoUso.jpg" id="mtable1" width="600" onclick="cambiarMesa();">
                 </td>
-                <td id="mesa 3">
-                    <img src="imagenes/mNoUso.jpg" width="600">
+                <td >
+                    <img src="mNoUso.jpg" id="mtable2" width="600" onclick="cambiarMesa();">
                 </td>
                
             </tr>
