--- a/p1.html
+++ b/p1.html
@@ -28,13 +28,13 @@
         <tbody>
             <tr>
                 <td>
-                    <img src="mNoUso.jpg" width="250" id="mtable1" onclick="cambiarMesa1();" >
+                    <img src="mNoUso.jpg" width="250" id="mtable1" onclick="cambiarMesa(this.id);" >
                 </td>
                 <td >
-                    <img src="mNoUso.jpg" width="250" id="mtable2" onclick="cambiarMesa2();">
+                    <img src="mNoUso.jpg" width="250" id="mtable2" onclick="cambiarMesa(this.id);">
                 </td>
                 <td >
-                    <img src="mNoUso.jpg" width="250" id="mtable3" onclick="cambiarMesa3();">
+                    <img src="mNoUso.jpg" width="250" id="mtable3" onclick="cambiarMesa(this.id);">
                 </td>
                
             </tr>
@@ -70,13 +70,13 @@
         <tbody>
             <tr>
                 <td>
-                    <img src="mNoUso.jpg" width="250" id="mtable4" onclick="cambiarMesa4();">
+                    <img src="mNoUso.jpg" width="250" id="mtable4" onclick="cambiarMesa(this.id);">
                 </td>
                 <td >
-                    <img src="mNoUso.jpg" width="250" id="mtable5" onclick="cambiarMesa5();">
+                    <img src="mNoUso.jpg" width="250" id="mtable5" onclick="cambiarMesa(this.id);">
                 </td>
                 <td >
-                    <img src="mNoUso.jpg" width="250" id="mtable6" onclick="cambiarMesa6();">
+                    <img src="mNoUso.jpg" width="250" id="mtable6" onclick="cambiarMesa(this.id);">
                 </td>
                
             </tr>
