Ya funciona el dinero

--- a/p1.html
+++ b/p1.html
@@ -28,13 +28,13 @@
         <tbody>
             <tr>
                 <td>
-                    <img src="mNoUso.jpg" width="250" id="mtable1" onclick="cambiarMesa(this.id,'tinicial1','ttransc1');" >
+                    <img src="mNoUso.jpg" width="250" id="mtable1" onclick="cambiarMesa(this.id,'tinicial1','ttransc1','ttotal1');" >
                 </td>
                 <td >
-                    <img src="mNoUso.jpg" width="250" id="mtable2" onclick="cambiarMesa(this.id,'tinicial2','ttransc2');">
+                    <img src="mNoUso.jpg" width="250" id="mtable2" onclick="cambiarMesa(this.id,'tinicial2','ttransc2','ttotal2');">
                 </td>
                 <td >
-                    <img src="mNoUso.jpg" width="250" id="mtable3" onclick="cambiarMesa(this.id,'tinicial3','ttransc3');">
+                    <img src="mNoUso.jpg" width="250" id="mtable3" onclick="cambiarMesa(this.id,'tinicial3','ttransc3','ttotal3');">
                 </td>
                
             </tr>
